# eda-workflow

./: .gitignore  README.md  example_usage.py  pyproject.toml
eda_workflow/: eda_workflow.py
eda_workflow/prompts/: extract_observations_human.txt  extract_observations_system.txt
